fix(css): fix see bottom todo when on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -23,7 +23,7 @@ html {
 }
 body {
     /* Margin bottom by footer height */
-    margin-bottom: 165px;
+    margin-bottom: 250px;
 }
 .footer {
     position: absolute;
